Search routes in place

--- a/merica.html
+++ b/merica.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mexico</title>
+  <title>United States</title>
 </head>
 <body>
   <a href="./index.html">BACK</a>
