--- a/html/index.html
+++ b/html/index.html
@@ -18,40 +18,40 @@
 </div>
 <nav>
 	<ul>
-		<li><a href="alaska.html">alaska</a></li>
-		<li><a href="canadaWest.html">canada west</a></li>
-		<li><a href="canadaEast.html">canada east</a></li>
-		<li><a href="murica.html">murica</a></li>
-		<li><a href="mexico.html">mexico</a></li>
+		<li><a href="alaska">ALASKA</a></li>
+		<li><a href="canadaWest">CANADA</a></li>
+		<li><a href="canadaEast">QUEBEC</a></li>
+		<li><a href="murica">AMERICA</a></li>
+		<li><a href="mexico">MEXICO</a></li>
 	</ul>
 
 <!-- begin map -->
 <table id="Table_01" width="600" height="526" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td>
-			<a href="alaska.html"
+			<a href="alaska"
 				onmouseover="window.status='Alaska';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img src="/images/01Alaska.gif" width="143" height="279" border="0" alt="Alaska"></a></td>
 		<td>
-			<a href="canadaWest.html">
+			<a href="canadaWest">
 				<img src="/images/1-coldAmerica.gif" width="240" height="279" border="0" alt=""></a></td>
 		<td>
-			<a href="canadaEast.html"
+			<a href="canadaEast"
 				onmouseover="window.status='Frenchy Cold America';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img src="/images/3-coldAmericaFrenchies.gif" width="217" height="279" border="0" alt="Frenchy Cold America"></a></td>
 	</tr>
 	<tr>
 		<td colspan="3">
-			<a href="merica.html"
+			<a href="merica"
 				onmouseover="window.status='REAL MURICA';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img src="/images/11murica.gif" width="600" height="127" border="0" alt="REAL MURICA"></a></td>
 	</tr>
 	<tr>
 		<td colspan="3">
-			<a href="mexico.html"
+			<a href="mexico"
 				onmouseover="window.status='Hot America';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img src="/images/21hotAmerica.gif" width="600" height="120" border="0" alt="Hot America"></a></td>
